--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -14,6 +14,7 @@ configurations {
 
 
 dependencies {
+    implementation project(':common')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
