--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
+    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.1'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
 }
