--- a/common/build.gradle
+++ b/common/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
     implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.1'
+    implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.6'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
 }
