--- a/common/build.gradle
+++ b/common/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.1'
     implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.6'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    implementation 'com.github.jsqlparser:jsqlparser:4.5'
 
 }
 
