--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 
     implementation 'org.redisson:redisson-spring-boot-starter:3.19.1'
 
+    implementation 'org.apache.skywalking:apm-toolkit-trace:8.14.0'
+    implementation 'org.apache.skywalking:apm-toolkit-logback-1.x:8.14.0'
 }
 
 dependencyManagement {
