--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -7,17 +7,17 @@ spring:
     nacos:
       config:
         group: zp
-        server-addr: localhost:8848
+        server-addr: 101.42.12.133:8848
         namespace: 31566b11-faba-4430-ab6c-353aa99c9874
         username: nacos
-        password: 123456
+        password: nacos123456
         file-extension: yml
       discovery:
         group: zp
-        server-addr: localhost:8848
+        server-addr: 101.42.12.133:8848
         namespace: 31566b11-faba-4430-ab6c-353aa99c9874
         username: nacos
-        password: 123456
+        password: nacos123456
         ip: 127.0.0.1
     openfeign:
       lazy-attributes-resolution: true
