--- a/common/build.gradle
+++ b/common/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.11'
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'org.redisson:redisson-spring-boot-starter:3.19.1'
+
+    implementation 'co.elastic.clients:elasticsearch-java:7.16.3'
+
 }
 
 dependencyManagement {
