--- a/user/build.gradle
+++ b/user/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'
@@ -44,6 +46,9 @@ dependencies {
     implementation 'org.lionsoul:ip2region:2.7.0'
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'org.redisson:redisson-spring-boot-starter:3.19.1'
+
+    implementation 'co.elastic.clients:elasticsearch-java:7.16.3'
+
 }
 
 dependencyManagement {
