--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
     implementation 'org.apache.skywalking:apm-toolkit-trace:8.14.0'
     implementation 'org.apache.skywalking:apm-toolkit-logback-1.x:8.14.0'
+
+    implementation 'co.elastic.clients:elasticsearch-java:7.16.3'
 }
 
 dependencyManagement {
