--- a/user/build.gradle
+++ b/user/build.gradle
@@ -15,6 +15,8 @@ configurations {
 
 dependencies {
     implementation project(':common')
+    implementation project(':logger')
+
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.boot:spring-boot-starter-web'
