--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -15,6 +15,7 @@ configurations {
 
 dependencies {
     implementation project(':common')
+    implementation project(':logger')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
