--- a/system/src/main/resources/application.yml
+++ b/system/src/main/resources/application.yml
@@ -52,7 +52,7 @@ spring:
 
 
 server:
-  port: 6100
+  port: 6168
 
 feign:
   sentinel:
@@ -65,4 +65,25 @@ zp:
 #  security:
 #    write-list:
 #      - /api/web/getFilePublic
+  logger-push:
+    es-host: 101.42.12.133
+    ex-port: 9200
+    es-username: elastic
+    es-password: Abcd1234....
+management:
+  health:
+    elasticsearch:
+      enabled: false
+
+
+  endpoint:
+    metrics:
+      enabled: true
+    health:
+      show-details: when_authorized
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
 
