--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.2'
+    id 'org.springframework.boot' version '3.0.4'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -37,6 +37,8 @@ dependencies {
     implementation 'org.apache.skywalking:apm-toolkit-logback-1.x:8.14.0'
 
     implementation 'co.elastic.clients:elasticsearch-java:7.16.3'
+
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 dependencyManagement {
