--- a/system/build.gradle
+++ b/system/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.2'
+    id 'org.springframework.boot' version '3.0.4'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -23,13 +23,13 @@ dependencies {
 
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-    runtimeOnly 'com.mysql:mysql-connector-j'
+//    runtimeOnly 'com.mysql:mysql-connector-j'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
-    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.1'
-    implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.6'
+//    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.1'
+//    implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.6'
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'
 //    implementation 'com.github.oshi:oshi-core:6.4.0'
 
