--- a/system/src/main/resources/application.yml
+++ b/system/src/main/resources/application.yml
@@ -29,14 +29,14 @@ spring:
   web:
     resources:
       add-mappings: false
-  datasource:
-    hikari:
-      max-lifetime: 60000
-    type: com.zaxxer.hikari.HikariDataSource
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://bj-cynosdbmysql-grp-a7tnayym.sql.tencentcdb.com:21449/zp?characterEncoding=utf8&useSSL=false&allowMultiQueries=true&useAffectedRows=true&rewriteBatchedStatements=true
-    username: admin01
-    password: CZPczp666...
+#  datasource:
+#    hikari:
+#      max-lifetime: 60000
+#    type: com.zaxxer.hikari.HikariDataSource
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://bj-cynosdbmysql-grp-a7tnayym.sql.tencentcdb.com:21449/zp?characterEncoding=utf8&useSSL=false&allowMultiQueries=true&useAffectedRows=true&rewriteBatchedStatements=true
+#    username: admin01
+#    password: CZPczp666...
   servlet:
     multipart:
       max-file-size: 1GB
@@ -70,12 +70,11 @@ zp:
     ex-port: 9200
     es-username: elastic
     es-password: Abcd1234....
+
 management:
   health:
     elasticsearch:
       enabled: false
-
-
   endpoint:
     metrics:
       enabled: true
