--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -14,6 +14,7 @@ configurations {
 
 
 dependencies {
+    implementation project(':sentinel-adapter')
 
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     compileOnly 'org.projectlombok:lombok'
@@ -26,12 +27,16 @@ dependencies {
     implementation 'com.auth0:java-jwt:4.0.0'
 
     // alibaba dependencies
-    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'
+    implementation ('com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'){
+        exclude group: 'com.alibaba.csp', module: 'sentinel-transport-simple-http'
+    }
+/*    implementation 'com.alibaba.csp:sentinel-datasource-nacos'
+    implementation 'com.alibaba.csp:sentinel-datasource-extension'*/
     implementation 'com.alibaba.cloud:spring-cloud-alibaba-sentinel-gateway'
+
+
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
-    implementation 'com.alibaba.csp:sentinel-datasource-nacos:1.8.6'
-//    implementation 'com.alibaba.csp:sentinel-spring-cloud-gateway-adapter'
 
     implementation 'org.apache.skywalking:apm-toolkit-trace:8.14.0'
     implementation 'org.apache.skywalking:apm-toolkit-logback-1.x:8.14.0'
