--- a/system/build.gradle
+++ b/system/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     implementation ('com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'){
         exclude group: 'com.alibaba.csp', module: 'sentinel-transport-simple-http'
     }
-    implementation 'com.alibaba.csp:sentinel-datasource-nacos'
-    implementation 'com.alibaba.csp:sentinel-datasource-extension'
+/*    implementation 'com.alibaba.csp:sentinel-datasource-nacos'
+    implementation 'com.alibaba.csp:sentinel-datasource-extension'*/
 
     implementation 'org.redisson:redisson-spring-boot-starter:3.19.1'
 
