--- a/user/build.gradle
+++ b/user/build.gradle
@@ -42,8 +42,8 @@ dependencies {
     implementation ('com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'){
         exclude group: 'com.alibaba.csp', module: 'sentinel-transport-simple-http'
     }
-    implementation 'com.alibaba.csp:sentinel-datasource-nacos'
-    implementation 'com.alibaba.csp:sentinel-datasource-extension'
+//    implementation 'com.alibaba.csp:sentinel-datasource-nacos'
+//    implementation 'com.alibaba.csp:sentinel-datasource-extension'
 
 
 
