--- a/system/build.gradle
+++ b/system/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 /*    implementation 'com.alibaba.csp:sentinel-datasource-nacos'
     implementation 'com.alibaba.csp:sentinel-datasource-extension'*/
 
-    implementation 'org.redisson:redisson-spring-boot-starter:3.19.1'
+//    implementation 'org.redisson:redisson-spring-boot-starter:3.19.1'
 
     implementation 'org.apache.skywalking:apm-toolkit-trace:8.14.0'
     implementation 'org.apache.skywalking:apm-toolkit-logback-1.x:8.14.0'
