--- a/system/src/main/resources/application.yml
+++ b/system/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
         username: nacos
         password: nacos123456
         file-extension: yml
-        enabled: false
+        enabled: true
       discovery:
         group: zp
         server-addr: 101.42.12.133:8848
@@ -25,65 +25,62 @@ spring:
     sentinel:
       enabled: false
 
-  mvc:
-    throw-exception-if-no-handler-found: true
-  web:
-    resources:
-      add-mappings: false
-#  datasource:
-#    hikari:
-#      max-lifetime: 60000
-#    type: com.zaxxer.hikari.HikariDataSource
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://bj-cynosdbmysql-grp-a7tnayym.sql.tencentcdb.com:21449/zp?characterEncoding=utf8&useSSL=false&allowMultiQueries=true&useAffectedRows=true&rewriteBatchedStatements=true
-#    username: admin01
-#    password: CZPczp666...
-  servlet:
-    multipart:
-      max-file-size: 1GB
-      max-request-size: 1GB
-  data:
-    redis:
-      database: 3
-      host: 82.156.191.218
-      port: 6379
-      password: admin123654
-      connect-timeout: 10000
+  config:
+    import:
+      - optional:nacos:zp-config?group=zp
+      - optional:nacos:zp-actuator-config.yml?group=zp
+      - optional:nacos:zp-mvc-normal?group=zp
+
+
+#  mvc:
+#    throw-exception-if-no-handler-found: true
+#  web:
+#    resources:
+#      add-mappings: false
+
+
+#  data:
+#    redis:
+#      database: 3
+#      host: 82.156.191.218
+#      port: 6379
+#      password: admin123654
+#      connect-timeout: 10000
 
 
 
 server:
   port: 6168
 
-feign:
-  sentinel:
-    enabled: true
-
-zp:
-  jwt:
-    salt: sdadaddadada
-    expires: 1000000000
+#feign:
+#  sentinel:
+#    enabled: true
+#
+#zp:
+#  jwt:
+#    salt: sdadaddadada
+#    expires: 1000000000
 #  security:
 #    write-list:
 #      - /api/web/getFilePublic
-  logger-push:
-    es-host: 101.42.12.133
-    ex-port: 9200
-    es-username: elastic
-    es-password: Abcd1234....
-
-management:
-  health:
-    elasticsearch:
-      enabled: false
-  endpoint:
-    metrics:
-      enabled: true
-    health:
-      show-details: when_authorized
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-
+#  logger-push:
+#    es-host: 101.42.12.133
+#    ex-port: 9200
+#    es-username: elastic
+#    es-password: Abcd1234....
+#
+#management:
+#  health:
+#    elasticsearch:
+#      enabled: false
+#  endpoint:
+#    metrics:
+#      enabled: true
+#    health:
+#      show-details: when_authorized
+#  endpoints:
+#    web:
+#      exposure:
+#        include: "*"
+#
 
