--- a/sentinel-adapter/build.gradle
+++ b/sentinel-adapter/build.gradle
@@ -35,3 +35,8 @@ dependencyManagement {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+compileJava {
+    options.compilerArgs << "-parameters"
+}
+
