--- a/system/build.gradle
+++ b/system/build.gradle
@@ -56,3 +56,8 @@ dependencyManagement {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+compileJava {
+    options.compilerArgs << "-parameters"
+}
+
