--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -55,3 +55,8 @@ dependencyManagement {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+compileJava {
+    options.compilerArgs << "-parameters"
+}
+
