--- a/storage/src/main/resources/application.yml
+++ b/storage/src/main/resources/application.yml
@@ -22,6 +22,11 @@ spring:
         ip: 127.0.0.1
     openfeign:
       lazy-attributes-resolution: true
+      compression:
+        request:
+          enabled: true
+        response:
+            enabled:  true
     sentinel:
       enabled: false
   config:
@@ -37,6 +42,8 @@ spring:
       max-request-size: 1GB
 server:
   port: 6100
+  compression:
+    enabled: true
 zp:
   storage:
     location: ./filetemp/a/
