--- a/system/src/main/resources/application.yml
+++ b/system/src/main/resources/application.yml
@@ -22,6 +22,11 @@ spring:
         ip: 127.0.0.1
     openfeign:
       lazy-attributes-resolution: true
+      compression:
+        request:
+          enabled: true
+        response:
+          enabled:  true
     sentinel:
       enabled: false
   config:
@@ -32,3 +37,5 @@ spring:
 
 server:
   port: 6168
+  compression:
+    enabled: true
