--- a/data-sharing/src/main/resources/application.yml
+++ b/data-sharing/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: zp-user-module
+    name: zp-datasharing-module
   profiles:
     active: dev
   cloud:
@@ -36,13 +36,12 @@ spring:
     import:
       - optional:nacos:zp-mysql-config.yml?group=zp
       - optional:nacos:zp-redis-config.yml?group=zp
-      - optional:nacos:zp-rabbit-config?group=zp
       - optional:nacos:zp-config?group=zp
       - optional:nacos:zp-actuator-config.yml?group=zp
       - optional:nacos:zp-mvc-normal?group=zp
 
 server:
-  port: 6050
+  port: 7050
   compression:
     enabled: true
 
