--- a/data-sharing/build.gradle
+++ b/data-sharing/build.gradle
@@ -39,6 +39,17 @@ dependencies {
     implementation 'org.redisson:redisson-spring-boot-starter:3.20.0'
     implementation 'org.apache.skywalking:apm-toolkit-trace:8.14.0'
     implementation 'org.apache.skywalking:apm-toolkit-logback-1.x:8.14.0'
+
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
+    implementation 'com.googlecode.aviator:aviator:5.3.3'
+
+    implementation 'org.graalvm.js:js-scriptengine:22.3.1'
+    implementation 'org.graalvm.js:js:22.3.1'
+
+    implementation 'org.apache.poi:poi-ooxml:5.2.3'
+
+
 }
 
 dependencyManagement {
