--- a/data-sharing/src/main/resources/application.yml
+++ b/data-sharing/src/main/resources/application.yml
@@ -39,9 +39,10 @@ spring:
       - optional:nacos:zp-config?group=zp
       - optional:nacos:zp-actuator-config.yml?group=zp
       - optional:nacos:zp-mvc-normal?group=zp
+      - optional:nacos:zp-rabbit-config?group=zp
 
 server:
-  port: 7050
+  port: 7051
   compression:
     enabled: true
 
