--- a/system/src/main/resources/application.yml
+++ b/system/src/main/resources/application.yml
@@ -8,7 +8,8 @@ spring:
       config:
         group: zp
         server-addr: 101.42.12.133:8848
-        namespace: 31566b11-faba-4430-ab6c-353aa99c9874
+#        namespace: 31566b11-faba-4430-ab6c-353aa99c9874
+        namespace: 1379388b-aed1-4082-8ed2-54699a4cc9d4
         username: nacos
         password: nacos123456
         file-extension: yml
@@ -16,7 +17,8 @@ spring:
       discovery:
         group: zp
         server-addr: 101.42.12.133:8848
-        namespace: 31566b11-faba-4430-ab6c-353aa99c9874
+        namespace: 1379388b-aed1-4082-8ed2-54699a4cc9d4
+#        namespace: 31566b11-faba-4430-ab6c-353aa99c9874
         username: nacos
         password: nacos123456
         ip: 127.0.0.1
