--- a/workflow/build.gradle
+++ b/workflow/build.gradle
@@ -35,16 +35,16 @@ dependencies {
         exclude group: 'com.alibaba.csp', module: 'sentinel-transport-simple-http'
     }
 
-//    implementation 'org.redisson:redisson-spring-boot-starter:3.22.0'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.22.0'
     implementation 'org.apache.skywalking:apm-toolkit-trace:8.16.0'
     implementation 'org.apache.skywalking:apm-toolkit-logback-1.x:8.16.0'
 
-    implementation 'org.activiti:activiti-engine:7.1.0.M6'
-//    implementation 'org.activiti:activiti-spring:7.1.0.M6'
-    implementation 'org.activiti:activiti-bpmn-model:7.1.0.M6'
-    implementation 'org.activiti:activiti-bpmn-converter:7.1.0.M6'
-    implementation 'org.activiti:activiti-json-converter:7.1.0.M6'
-    implementation 'org.activiti:activiti-bpmn-layout:7.1.0.M6'
+//    implementation 'org.activiti:activiti-engine:7.1.0.M6'
+////    implementation 'org.activiti:activiti-spring:7.1.0.M6'
+//    implementation 'org.activiti:activiti-bpmn-model:7.1.0.M6'
+//    implementation 'org.activiti:activiti-bpmn-converter:7.1.0.M6'
+//    implementation 'org.activiti:activiti-json-converter:7.1.0.M6'
+//    implementation 'org.activiti:activiti-bpmn-layout:7.1.0.M6'
 
 
 }
