--- a/user/build.gradle
+++ b/user/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.2'
-    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '3.1.3'
+    id 'io.spring.dependency-management' version '1.1.3'
 }
 
 sourceCompatibility = '17'
@@ -45,15 +45,15 @@ dependencies {
 
     implementation 'com.auth0:java-jwt:4.4.0'
 
-    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.1'
+    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.2'
     implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.7'
 
     implementation 'org.apache.skywalking:apm-toolkit-trace:8.16.0'
     implementation 'org.apache.skywalking:apm-toolkit-logback-1.x:8.16.0'
 
     implementation 'org.lionsoul:ip2region:2.7.0'
-    implementation 'com.google.guava:guava:32.0.1-jre'
-    implementation 'org.redisson:redisson-spring-boot-starter:3.22.0'
+    implementation 'com.google.guava:guava:32.1.2-jre'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.23.3'
 
 
 
@@ -62,7 +62,7 @@ dependencies {
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-        mavenBom 'com.alibaba.cloud:spring-cloud-alibaba-dependencies:2022.0.0.0-RC2'
+        mavenBom 'com.alibaba.cloud:spring-cloud-alibaba-dependencies:2022.0.0.0'
     }
 }
 
