--- a/workflow/build.gradle
+++ b/workflow/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.2'
-    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '3.1.3'
+    id 'io.spring.dependency-management' version '1.1.3'
 }
 sourceCompatibility = '17'
 
@@ -28,14 +28,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config'
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
-    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.1'
+    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.2'
     implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.7'
 
     implementation ('com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'){
         exclude group: 'com.alibaba.csp', module: 'sentinel-transport-simple-http'
     }
 
-    implementation 'org.redisson:redisson-spring-boot-starter:3.22.0'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.23.3'
     implementation 'org.apache.skywalking:apm-toolkit-trace:8.16.0'
     implementation 'org.apache.skywalking:apm-toolkit-logback-1.x:8.16.0'
 
@@ -53,7 +53,7 @@ dependencies {
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-        mavenBom 'com.alibaba.cloud:spring-cloud-alibaba-dependencies:2022.0.0.0-RC2'
+        mavenBom 'com.alibaba.cloud:spring-cloud-alibaba-dependencies:2022.0.0.0'
     }
 }
 
