--- a/task/build.gradle
+++ b/task/build.gradle
@@ -50,7 +50,13 @@ dependencies {
     implementation 'org.apache.skywalking:apm-toolkit-logback-1.x:9.0.0'
 
 
-    implementation 'org.quartz-scheduler:quartz:2.5.0-rc1'
+//    implementation 'org.quartz-scheduler:quartz:2.5.0-rc1'
+    implementation 'org.apache.shardingsphere.elasticjob:elasticjob-lite-core:3.0.3'
+    implementation 'org.apache.shardingsphere.elasticjob:elasticjob-http-executor:3.0.3'
+    implementation 'org.apache.shardingsphere.elasticjob:elasticjob-lite-lifecycle:3.0.3'
+    implementation 'org.apache.shardingsphere.elasticjob:elasticjob-api:3.0.3'
+//
+//    implementation 'org.apache.shardingsphere.elasticjob:elasticjob-lite-spring-boot-starter:3.0.3'
 
 }
 
