--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -4,7 +4,10 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.3'
 }
 
-sourceCompatibility = '17'
+
+java {
+    sourceCompatibility = '17'
+}
 
 configurations {
     compileOnly {
