--- a/workflow/build.gradle
+++ b/workflow/build.gradle
@@ -3,7 +3,10 @@ plugins {
     id 'org.springframework.boot' version '3.1.3'
     id 'io.spring.dependency-management' version '1.1.3'
 }
-sourceCompatibility = '17'
+
+java{
+    sourceCompatibility = '17'
+}
 
 configurations {
     compileOnly {
