--- a/task/src/main/resources/application.yml
+++ b/task/src/main/resources/application.yml
@@ -29,8 +29,11 @@ spring:
           enabled: true
         response:
             enabled:  true
-    sentinel:
-      enabled: false
+      okhttp:
+        enabled: true
+
+
+
   config:
     import:
 #      - optional:nacos:zp-mysql-config.yml?group=zp
@@ -60,3 +63,4 @@ zp:
   task:
     zk:
       address: "127.0.0.1:2181"
+
