--- a/base/build.gradle
+++ b/base/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 java{
-    sourceCompatibility = '17'
+    sourceCompatibility = '21'
 }
 
 configurations {
@@ -41,9 +41,9 @@ dependencies {
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
 
 
-    implementation ('com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'){
-        exclude group: 'com.alibaba.csp', module: 'sentinel-transport-simple-http'
-    }
+//    implementation ('com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'){
+//        exclude group: 'com.alibaba.csp', module: 'sentinel-transport-simple-http'
+//    }
 
     implementation 'com.auth0:java-jwt:4.4.0'
 
@@ -57,7 +57,7 @@ dependencies {
     implementation 'com.google.guava:guava:32.1.2-jre'
     implementation 'org.redisson:redisson-spring-boot-starter:3.23.3'
 
-
+    implementation 'io.github.openfeign:feign-okhttp:12.5'
 
 }
 
