--- a/common-kt/build.gradle
+++ b/common-kt/build.gradle
@@ -1,7 +1,7 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.8.22'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.20-Beta2'
 
     id 'org.springframework.boot' version '3.1.4'
     id 'io.spring.dependency-management' version '1.1.3'
@@ -9,7 +9,7 @@ plugins {
 
 
 java{
-    sourceCompatibility = '17'
+    sourceCompatibility = '21'
 }
 
 dependencies {
@@ -32,7 +32,7 @@ tasks.withType(KotlinCompile).configureEach {
     kotlinOptions {
         freeCompilerArgs += '-Xjsr305=strict'
         freeCompilerArgs += '-Xmulti-platform'
-        jvmTarget = '17'
+        jvmTarget = '21'
     }
 }
 
