--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = '21'
 }
 
 configurations {
@@ -29,10 +29,10 @@ dependencies {
 
     implementation 'com.auth0:java-jwt:4.0.0'
 
-    // alibaba dependencies
-    implementation ('com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'){
-        exclude group: 'com.alibaba.csp', module: 'sentinel-transport-simple-http'
-    }
+
+//    implementation ('com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'){
+//        exclude group: 'com.alibaba.csp', module: 'sentinel-transport-simple-http'
+//    }
 /*    implementation 'com.alibaba.csp:sentinel-datasource-nacos'
     implementation 'com.alibaba.csp:sentinel-datasource-extension'*/
     implementation 'com.alibaba.cloud:spring-cloud-alibaba-sentinel-gateway'
