--- a/task-depend/build.gradle
+++ b/task-depend/build.gradle
@@ -1,10 +1,10 @@
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.8.22'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.20-Beta2'
 }
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = '21'
 }
 
 configurations {
