--- a/task/build.gradle
+++ b/task/build.gradle
@@ -4,12 +4,12 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 plugins {
     id 'org.springframework.boot' version '3.1.4'
     id 'io.spring.dependency-management' version '1.1.3'
-    id 'org.jetbrains.kotlin.jvm' version '1.8.22'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.8.22'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.20-Beta2'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.9.20-Beta2'
 }
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = '21'
 }
 
 configurations {
@@ -42,12 +42,14 @@ dependencies {
     implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.2'
     implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.7'
 
-    implementation ('com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'){
-        exclude group: 'com.alibaba.csp', module: 'sentinel-transport-simple-http'
-    }
+//    implementation ('com.alibaba.cloud:spring-cloud-starter-alibaba-sentinel'){
+//        exclude group: 'com.alibaba.csp', module: 'sentinel-transport-simple-http'
+//    }
 
     implementation 'org.apache.skywalking:apm-toolkit-trace:9.0.0'
     implementation 'org.apache.skywalking:apm-toolkit-logback-1.x:9.0.0'
+
+    implementation 'io.github.openfeign:feign-okhttp:12.5'
 
 
 //    implementation 'org.quartz-scheduler:quartz:2.5.0-rc1'
@@ -72,7 +74,7 @@ dependencyManagement {
 tasks.withType(KotlinCompile).configureEach {
     kotlinOptions {
         freeCompilerArgs += '-Xjsr305=strict'
-        jvmTarget = '17'
+        jvmTarget = '21'
     }
 }
 
