--- a/workflow/src/main/resources/application.yml
+++ b/workflow/src/main/resources/application.yml
@@ -28,9 +28,8 @@ spring:
           enabled: true
         response:
           enabled:  true
-
-    sentinel:
-      enabled: false
+      okhttp:
+        enabled: true
 
   config:
     import:
