--- a/task/src/main/resources/application.yml
+++ b/task/src/main/resources/application.yml
@@ -40,6 +40,7 @@ spring:
       - optional:nacos:zp-config?group=zp
       - optional:nacos:zp-actuator-config.yml?group=zp
       - optional:nacos:zp-mvc-normal?group=zp
+      - optional:nacos:zp-redis-config.yml?group=zp
   servlet:
     multipart:
       max-file-size: 1GB
