--- a/task/src/main/resources/application.yml
+++ b/task/src/main/resources/application.yml
@@ -69,5 +69,5 @@ zp:
 #      digestACL: "zkadmin:Abcd1234"
     task-cfg:
       address: "127.0.0.1:2181"
-      registIp: "10.18.5.26"
+#      registIp: "10.18.5.26"
 #      digestACL: "zkadmin:Abcd1234"
